[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/Themes/Default.theme" type="Theme" id=1]
[ext_resource path="res://GUI/Shop/ShopItem.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.105882, 0.996078, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[node name="ShopItem" type="Control"]
margin_right = 1820.0
margin_bottom = 160.0
rect_min_size = Vector2( 1820, 160 )
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ItemName" type="Label" parent="."]
margin_right = 600.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Item Name"
align = 1
valign = 1

[node name="LevelName" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -0.901581
margin_top = -7.0
margin_right = 599.098
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.105882, 0.996078, 0.6, 1 )
text = "LEVEL NAME"
align = 1
valign = 1

[node name="NextLevelCost" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -505.0
margin_top = -41.0
custom_fonts/font = SubResource( 3 )
text = "COSTS    00000    SKRILLA"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -25.8568
margin_right = 250.0
margin_bottom = 24.1432
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
max_value = 4.0
value = 1.0
percent_visible = false

[node name="UpgradeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -25.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 6 )
text = "UPGRADE"

